<resources>
    <string name="app_name">Alarmnats</string>
    <string name="question_title">Please select the correct answer to dismiss the alarm</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="default_question">Default</string>
    <string name="qr_question">QR code</string>
    <string name="math_question">Math problem</string>
    <string name="ok">OK</string>
    <string name="zero_o_clock">00:00</string>
    <string name="x_y_z">x*y+z</string>
    <string name="weather">Weather</string>
    <string name="choose_ringtone">Choose ringtone</string>
    <string name="label">Label</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="recaptcha_question">Verify reCaptcha</string>
    <string-array name="question_list">
        <item>@string/default_question</item>
        <item>@string/qr_question</item>
        <item>@string/math_question</item>
        <item>@string/recaptcha_question</item>
    </string-array>
    <string name="Choose_Storage_and_default">Default</string>
    <string name="Search_from_spotify">Search from spotify</string>
    <string-array name="SearchMusic">
        <item>@string/Choose_Storage_and_default</item>
        <item>@string/Search_from_spotify</item>
    </string-array>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_function">Function</string>
    <string name="title_activity_display_search_song">DisplaySearchSong</string>
    <string name="tag_sharedprefs">com.e15.alarmnats</string>
    <string name="tag_sharedpref_token">com.e15.alarmnats.token</string>
    <string name="choose_song">Choose Song</string>

    <string name="ic_alarm">ic_alarm</string>
    <string name="choose_task">Choose task</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="default_">Default</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="alarm">Alarm</string>
    <string name="ringtone">Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="save_alarm">Save Alarm</string>
    <string name="qr_code">QR Code</string>
    <string name="math_problems">Math</string>
    <string name="shake">Shake</string>
    <string name="recaptcha">Recaptcha</string>
    <string name="cancel">Cancel</string>
    <string name="system_ringtone">System Ringtone</string>
    <string name="spotify_ringtone">Spotify Ringtone</string>

    <color name="switchOn">#f2f2f2</color>
    <color name="switchOff">#d9d9d9</color>
</resources>