<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityController.ChooseTaskActivity">

    <TableLayout
        android:layout_width="387dp"
        android:layout_height="385dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="chooseDefault"
                app:cardCornerRadius="16dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/baseline_alarm_black_48"
                    android:gravity="center"
                    android:text="@string/default_"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:onClick="chooseMath"
                app:cardCornerRadius="16dp" >

                <TextView
                    android:id="@+id/tvMath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_math"
                    android:gravity="center"
                    android:text="@string/math_problems"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp"
                android:paddingTop="16dp"
                android:onClick="chooseRecaptcha">

                <TextView
                    android:id="@+id/tvShake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/phone_shake"
                    android:gravity="center"
                    android:text="@string/recaptcha"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="16dp"
                android:paddingTop="16dp"
                android:onClick="chooseQR">

                <TextView
                    android:id="@+id/tvQR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:drawableTop="@mipmap/qrcode_alarme"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/qr_code"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:paddingTop="16dp"/>
            </android.support.v7.widget.CardView>
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>